fix(styling): fix footer stick to bottom, fix spacing on user page

--- a/pages/_app.module.scss
+++ b/pages/_app.module.scss
@@ -5,6 +5,7 @@
     'header'
     'main'
     'footer';
+  min-height: 100vh;
 }
 
 .header {
@@ -15,7 +16,7 @@
   grid-area: main;
   width: 100%;
   max-width: 1100px;
-  margin: auto;
+  margin: 0 auto;
   padding: var(--spacing-7) var(--spacing-4);
 }
 
